--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.7.2",
     "node-cron": "^3.0.3",
