--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.0.2",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.10",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
     "react": "^18.3.1",
